# wifikey2

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL-ja.md  INSTALL.md  Makefile.toml  README-ja.md  README.md  build-m5burner.ps1  cfg-sample.toml  flash.ps1  mqttstunclient  sdkconfig.defaults
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion.md  tauri_migration_plan.md  tech_stack.md  test-implementation-progress.md
docs/: plan-esp32-setup-simplification.md  test-plan.md
scripts/: build-server.ps1  pre-commit  setup-hooks.ps1  setup-hooks.sh
wifikey/: Cargo.toml  build.rs  partition_table.csv  sdkconfig.defaults
wifikey-esp32-server/: Cargo.toml
wifikey-esp32-server/src/: config.rs  keyer.rs  main.rs  serial_cmd.rs  webserver.rs  wifi.rs
wifikey-server/: Cargo.toml  build.rs  cfg-sample.toml  package-lock.json  package.json
wifikey-server/examples/: client.rs  server.rs
wifikey-server/installer/: wifikey2.nsi
wifikey-server/pwa/: app.js  index.html  manifest.json  styles.css
wifikey-server/scripts/: ftdx10.lua  icom_ic705.lua  icom_ic7300.lua  icom_template.lua  yaesu_ft891.lua
wifikey-server/src/: app.rs  keyer.rs  lib.rs  main.rs  rigcontrol.rs  server.rs  wifikey.rs
wifikey-server/src-frontend/: esp32-config.js  index.html  main.js  settings.js  styles.css
wifikey-server/src-tauri/: Cargo.toml  tauri.conf.json
wifikey-server/src-tauri/capabilities/: default.json
wifikey-server/src-tauri/src/: commands.rs  config.rs  keyer.rs  lib.rs  main.rs  pwa_server.rs  rigcontrol.rs  server.rs
wifikey/.cargo/: config.toml
wifikey/src/: config.rs  encoder.rs  keyer.rs  main.rs  serial_cmd.rs  webserver.rs  wifi.rs
wkmessage/: Cargo.toml
wkmessage/.cargo/: config.toml
wkmessage/src/: lib.rs  wkmessage.rs
wksocket/: Cargo.toml
wksocket/src/: lib.rs  wkmessage.rs  wksession.rs  wkutil.rs
