[package]
name = "wifikey-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serialport = "4.3.0"
kcp = "0.5"
bytes = "1.1"
log = { version = "0.4", default-features = false }
time = "0.3"
config = "0.14.0"
egui_logger = "0.4"
wksocket = { path = "../wksocket" }
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
