[package]
name = "wifikey"
version = "0.1.0"
authors = ["Minoru Tomobe <minoru.tomobe@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["std", "esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1"
bytes = "1.1"
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-svc = { version = "0.48", features = ["experimental"] }
esp-idf-hal = "*"
log = { version = "0.4", default-features = false }
smart-leds = "0.4"
ws2812-esp32-rmt-driver = { git = "https://github.com/w-ockham/ws2812-esp32-rmt-driver", features = [
  "smart-leds-trait",
] }
toml-cfg = "0.2"
wksocket = { path = "../wksocket" }
[build-dependencies]
embuild = "0.31.3"
