[package]
name = "wksocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1.1"
kcp = "0.5"
log = { version = "0.4", default-features = false }
time = "0.3"
rand = "0.9"
md-5 = "0.10"
subtle = "2.5"

[target.'cfg(any(target_arch = "xtensa", target_arch = "riscv32"))'.dependencies]
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-svc = { version = "0.51", features = ["experimental"] }
esp-idf-hal = "0.45"
