[package]
name = "wifikey-server"
version = "0.1.0"
edition = "2021"
description = "WiFiKey2 Server - Remote CW Keyer"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-log = { version = "2.0", features = ["colored"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "time"] }

# Error handling
anyhow = "1.0"

# Encryption
chacha20poly1305 = "0.10"

# Serial port
serialport = "4.3.0"

# KCP protocol
kcp = "0.5"
bytes = "1.1"

# Logging
log = { version = "0.4", default-features = false }

# MQTT/STUN
rumqttc = "0.24"
stunclient = "0.4"

# Time handling
time = "0.3"
chrono = "0.4"

# Configuration
config = "0.15.0"
toml = "0.8"

# Internal dependencies
wksocket = { path = "../../wksocket" }
mqttstunclient = { path = "../../mqttstunclient", features = ["ru-mqtt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
